# MGARDx

./: .gitignore  CMakeLists.txt  README.md
include/: decompose.hpp  quant_pred.hpp  recompose.hpp  reorder.hpp  reorder_int.hpp  utils.hpp
test/: CMakeLists.txt  test_compress.cpp
