cmake_minimum_required (VERSION 3.10)
project(xMGARD)
project(First VERSION 1.0.0.0)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-g -O3")

find_library(ZSTD_LIB zstd HINTS "/project/xli281_uksr/pjiao/apps/spack/opt/spack/linux-centos8-zen2/gcc-9.3.0/zstd-1.5.2-wjrkq64g5lu4fpragmfxt2cmjzdumxev/lib64")
# find_library(SZ3_LIB SZ3c HINTS "/Users/xin/github/SZ_refactory/build/src")
find_library(SZ_CPP_LIB sz_cpp HINTS "/scratch/pji228/gittmp/meta_compressor/build/lib")
set (ZSTD_INC "/project/xli281_uksr/pjiao/apps/spack/opt/spack/linux-centos8-zen2/gcc-9.3.0/zstd-1.5.2-wjrkq64g5lu4fpragmfxt2cmjzdumxev/include")
set (SZ3_INC "/scratch/pji228/gittmp/mgard_ada/external/SZ3/include/")
set (SZ_CPP_INC "/scratch/pji228/gittmp/meta_compressor/include")
message((${SZ3_INC}))

add_subdirectory (test)
# add_subdirectory (parallel_src)
